chore: Add more css properties to navbar including fixing sticky with z-index

--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -22,3 +22,10 @@
 .high-score {
   margin-right: 40px;
 }
+
+.clickResponse {
+  margin-right: 120px;
+  padding-right: 200px;
+  color: darkorchid;
+  font-size: 20px;
+}
